--- a/Assets/css/mobile.css
+++ b/Assets/css/mobile.css
@@ -32,7 +32,7 @@ p, li {
 
 h4 {
 	color: yellow;
-	line-height: 5px;
+	line-height: 25px;
 	font-size: 18px;
 }
 
@@ -131,11 +131,13 @@ h4 {
 	overflow-x: hidden;
 	overflow-y: hidden;
 	padding: 2%;
+
+	float: left;
 }
 
 #title {
 	font-size: 40px;
-	color: black;
+	color: white;
 	font-weight: bold;
 	text-align: center;
 }
@@ -143,6 +145,8 @@ h4 {
 #Lynda { /* body section image settings */
 	width: 100%;
 	text-align: center;
+	float: left; 
+	margin-bottom: 2%;
 }
 
 #Lyndapic { /* body section image settings */
@@ -150,7 +154,7 @@ h4 {
 	height: 40%;
 	padding-left: 1.5%;
 	padding-right: 1.5%;
-
+	text-align: center;
 }
 
 #About { /* For About Plan B Page List headers */
@@ -170,6 +174,7 @@ h4 {
 	padding-right: 2%;
 	padding-bottom: 2%;
 	background-color: rgba(69,168,84,0.5);
+	float: left;
 }
 
 #homePageServ {
@@ -187,6 +192,8 @@ h4 {
 	font-size: 30px;
 	color: white;
 	text-align: center;
+	float: left;
+	width: 100%;
 }
 
 #homePageEmail {
