--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -127,7 +127,7 @@ h4 {
 
 #title {
 	font-size: 40px;
-	color: black;
+	color: white;
 	font-weight: bold;
 	text-align: center;
 	font-family: Gill Sans, sans-serif;
