--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -45,6 +45,7 @@ h4 {
 	height: 100%;
 	display: block;
 	overflow: hidden;
+	max-width: 1920px;
 }
 
 #email {
@@ -126,12 +127,11 @@ h4 {
 }
 
 #title {
-	font-size: 40px;
+	font-size: 55px;
 	color: white;
 	font-weight: bold;
 	text-align: center;
 	font-family: Gill Sans, sans-serif;
-	text-decoration: underline;
 }
 
 #Lynda { /* body section image settings */
