--- a/Assets/css/mobile.css
+++ b/Assets/css/mobile.css
@@ -173,6 +173,13 @@ h4 {
 	padding-right: 2%;
 	padding-bottom: 2%;
 	background-color: rgba(69,168,84,0.5);
+}
+
+#homePageAbout {
+	padding-left: 2%;
+	padding-right: 2%;
+	padding-bottom: 2%;
+	background-color: rgba(69,168,84,0.5);
 	float: left;
 }
 
@@ -183,7 +190,6 @@ h4 {
 	background-color: rgba(69,168,84,0.5);
 	width: 97%;
 	text-align:center;
-	
 }
 
 #homeTitle {
