--- a/Assets/css/mobile.css
+++ b/Assets/css/mobile.css
@@ -25,7 +25,7 @@ p, li {
 	height: 40px;
 	width: 100%;
 	text-align: center;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	border-radius: 5%;
 	margin: auto;
 }
@@ -53,11 +53,11 @@ h4 {
 /*Body-Container Section */
 
 #content {
-	box-shadow:inset 0px 0px 30px 20px #BC9CFF, 0 0 30px 20px #563B8E;
-	background: -webkit-linear-gradient(#5445A8, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#5445A8, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#5445A8, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#5445A8, white); /* Standard syntax */
+	box-shadow: 0 0 30px 20px #6557B0;
+	background: -webkit-linear-gradient(#493C91, #877FB2); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#493C91, #877FB2); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#493C91, #877FB2); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#493C91, #877FB2); /* Standard syntax */
 	position: relative;
 	width: 95%;
 	margin-left: auto;
@@ -77,10 +77,10 @@ h4 {
 	width: 100%;
 	display: none;
 	background-color: rgba(89, 65, 42, 0.5);
-	background: -webkit-linear-gradient(#9370DB, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#9370DB, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#9370DB, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to top, rgba(89, 65, 42, 0), rgba(89, 65, 42, 0.5)); /* Standard syntax */
+	background: -webkit-linear-gradient(#3A2C57, white); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#3A2C57, white); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#3A2C57, white); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to top, rgba(142, 132, 163, 0), rgba(142, 132, 163, 0.5)); /* Standard syntax */
 }
 
 
@@ -139,6 +139,8 @@ h4 {
 	color: white;
 	font-weight: bold;
 	text-align: center;
+	font-family: Gill Sans, sans-serif;
+
 }
 
 #Lynda { /* body section image settings */
@@ -172,14 +174,14 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 }
 
 #homePageAbout {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	float: left;
 }
 
@@ -187,7 +189,7 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	height: 100%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	width: 97%;
 	text-align:center;
 }
@@ -206,7 +208,7 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	float: left;
 	width: 97%;
 	margin-right: 2%;
@@ -230,6 +232,6 @@ iframe {
 
 #DFP {
 	color: black;
-	text-align: center; 
+	text-align: center;
 	font-size: 12px;
 }
