--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -33,11 +33,11 @@ h4 {
 /*Body-Container Section */
 
 #content { /* site container */
-	box-shadow:inset 0px 0px 30px 20px #BC9CFF, 0 0 30px 20px #563B8E;
-	background: -webkit-linear-gradient(#9370DB, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#9370DB, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#9370DB, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#9370DB, white); /* Standard syntax */
+	box-shadow:inset 0px 0px 30px 20px #A98CE5, 0 0 30px 20px #6557B0;
+	background: -webkit-linear-gradient(#493C91, #877FB2); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#493C91, #877FB2); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#493C91, #877FB2); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#493C91, #877FB2); /* Standard syntax */
 	position: relative;
 	width: 95%;
 	margin-left: auto;
@@ -66,10 +66,10 @@ h4 {
 	margin-left: 2%;
 	margin-top: 2%;
 	background-color: rgba(89, 65, 42, 0.5);
-	background: -webkit-linear-gradient(#9370DB, white); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#9370DB, white); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#9370DB, white); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to top, rgba(89, 65, 42, 0), rgba(89, 65, 42, 0.5)); /* Standard syntax */
+	background: -webkit-linear-gradient(#3A2C57, white); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#3A2C57, white); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#3A2C57, white); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to top, rgba(142, 132, 163, 0), rgba(142, 132, 163, 0.5)); /* Standard syntax */
 	position: fixed;
 }
 
@@ -132,6 +132,7 @@ h4 {
 	font-weight: bold;
 	text-align: center;
 	font-family: Gill Sans, sans-serif;
+	background-color: rgba(0,0,0,0.7);
 }
 
 #Lynda { /* body section image settings */
@@ -164,7 +165,7 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	float: left;
 }
 
@@ -172,7 +173,7 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	float: left;
 }
 
@@ -180,7 +181,7 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	width: 44%;
 	float: left;
 	margin-right: 2%;
@@ -202,7 +203,7 @@ h4 {
 	padding-left: 2%;
 	padding-right: 2%;
 	padding-bottom: 2%;
-	background-color: rgba(69,168,84,0.5);
+	background-color: rgba(139,129,158,0.5);
 	float: left;
 	width: 95%;
 	margin-right: 2%;
